--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -11,3 +11,10 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 /* ------------------------------------ */
 /* -------- *Bootstrap END* ----------- */
 /* ------------------------------------ */
+
+/* HEADER */
+@import "style/header";
+/* THEMES */
+@import "style/themes";
+
+@import "style/index/index";
