--- a/_application/template/index.pug
+++ b/_application/template/index.pug
@@ -1,8 +1,11 @@
+-var active_menu = 'Главная';
+
 html(lang='ru')
 	include include/common/head
 	body
 		include include/common/header
-		//- include include/home/full-slider
-	
+
+		include include/index/carousel
+		include include/index/about-section
 
 		include include/common/footer
