--- a/_application/template/include/common/head.pug
+++ b/_application/template/include/common/head.pug
@@ -11,7 +11,7 @@ head
 
 	title Ortodonts
 
-	link(rel='stylesheet', href='styles/libs/FontAwesome/font-awesome.min.css')
+	link(rel='stylesheet', href='styles/css/font.min.css')
 	link(rel='stylesheet', href='styles/css/main.min.css')
 
 	script(src='js/jquery.min.js')
