--- a/_application/template/include/common/head.pug
+++ b/_application/template/include/common/head.pug
@@ -8,6 +8,8 @@ head
 	meta(property="og:title", content="Передовая ортодонтия в Москве. Врач-ортодонт Надежда Николаева.")
 	meta(property="og:image", content="/images/")
 	meta(property="og:description", content="Брекет системы.")
+	
+	link(rel="icon", type="image/png", href="images/favicon.png")
 
 	title Ortodonts
 
