--- a/_application/template/include/index/about-section.pug
+++ b/_application/template/include/index/about-section.pug
@@ -6,16 +6,34 @@ section.about-section-index.section-p-80(data-js-init="indexPage")
 				h1 Надежда Николаева
 				span.description-mini Врач-ортодонт
 				
-				.row
-					.col-md-4
-						img.doctor-photo(src="images/vrach-ortodont_Nikolaeva_Nadezhda.jpg", alt="")
 				
-					.col-md-8
-						p.
-							Мой подход к лечению - коррекция положения и размеров зубных рядов, нормализация прикуса и создание оптимального динамического соотношения приводящих и отводящих мышц. Конечный результат - улучшение эстетики лица, красивая улыбка и правильный прикус.
+				.content-about.align-content-center.flex-wrap.d-flex
+					p.
+						Мой подход к лечению - коррекция положения и размеров зубных рядов, нормализация прикуса и создание оптимального динамического соотношения приводящих и отводящих мышц. Конечный результат - улучшение эстетики лица, красивая улыбка и правильный прикус.
 
+					.about-list-advantages
+						.item-about-advantages.d-flex.align-items-center
+							.icon-item-about-advantages.diploma
+							.text-item-about-advantages.
+								Дипломированный и сертифицированный специалист
+							.clearfix
 
-				a.btn.btn-primary(href="../build/about.html").hvr-grow-shadow узнать больше
+						.item-about-advantages.d-flex.align-items-center
+							.icon-item-about-advantages.practice
+							.text-item-about-advantages.
+								Десять лет непрерывной практики в ортодонтии
+							.clearfix
+
+						.item-about-advantages.d-flex.align-items-center
+							.icon-item-about-advantages.certificate
+							.text-item-about-advantages.
+								Постоянный участник семинаров и конференций
+							.clearfix
+
 			.col-md-6
+				img.doctor-photo(src="images/vrach-ortodont_Nikolaeva_Nadezhda.jpg", alt="")
+
+				
+			//- a.btn.btn-primary(href="../build/about.html").hvr-grow-shadow узнать больше
 				
 // ABOUT SECTION* 
