--- a/_application/template/include/index/advantages-section.pug
+++ b/_application/template/include/index/advantages-section.pug
@@ -1,9 +1,9 @@
 // Advantages
 section.advantages-section-index.section-p-80
 	.container
-		.row
-			.col-md-12
-				h2.text-center Преимущества
+		//- .row
+		//- 	.col-md-12
+		//- 		h2.text-center Преимущества
 		.row
 			.col-md-3
 				.advantage-wrapper
