--- a/_application/template/include/index/carousel.pug
+++ b/_application/template/include/index/carousel.pug
@@ -1,11 +1,18 @@
 #carousel.carousel.slide(data-ride="carousel")
-	ol.carousel-indicators.flex-column
-		li.active(data-target="#carousel", data-slide-to="0")
-		li(data-target="#carousel", data-slide-to="1")
-		li(data-target="#carousel", data-slide-to="2")
 
 	.carousel-inner(role="listbox")
-		.carousel-item.active(style="background: url(images/slider/1.jpg) no-repeat;background-size: cover;", alt="First slide")
+		.carousel-item.active(style="background: url(images/slider/sovremennaya_ortodontiya_v_moskve.jpg) no-repeat;background-size: cover;", alt="Современная ортодонтия в Москве")
+			.carousel-caption.d-flex.align-items-center
+				.flex-column(style="width: 100%")
+					h2.
+						ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
+					//- p.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+
+					a.btn.btn-primary(href="", target="_blank") Подробнее
+
+					
+		.carousel-item(style="background: url(images/slider/nikolaeva_nadezhda_vrach-ortodont_v_moskve.jpg) no-repeat;background-size: cover;", alt="Николаева Надежда Николаевна врач-ортодонт в Москве")
 			.carousel-caption.d-flex.align-items-center
 				.flex-column(style="width: 100%")
 					h2.
@@ -16,8 +23,24 @@
 					a.btn.btn-primary(href="", target="_blank") Подробнее
 
 
-	a.mouse-scroll(onclick="scroll_down()")
-		span Прокрутите вниз
-		.mouse
-		.down-mouse
-			i.bottom
+		.carousel-item(style="background: url(images/slider/premium_breket-sistemi_v_moskve.jpg) no-repeat;background-size: cover;", alt="Премиум брекет-системы в Москве")
+			.carousel-caption.d-flex.align-items-center
+				.flex-column(style="width: 100%")
+					h2.
+						ПЕРЕДОВАЯ ОРТОДОНТИЯ <br> В МОСКВЕ
+					//- p.
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+
+					a.btn.btn-primary(href="", target="_blank") Подробнее
+
+	.container.slider-bottom-container
+
+		ol.carousel-indicators.justify-content-start.align-items-center
+			li.active(data-target="#carousel", data-slide-to="0")
+			li(data-target="#carousel", data-slide-to="1")
+			li(data-target="#carousel", data-slide-to="2")
+
+		a.mouse-scroll(onclick="scroll_down()").text-right
+			span Прокрутите вниз
+			.down-mouse
+				i.bottom
