--- a/_application/scss/include/_variables.scss
+++ b/_application/scss/include/_variables.scss
@@ -94,7 +94,7 @@
 // Start with assigning color names to specific hex values.
 $white:  #fff !default;
 $black:  #000 !default;
-$red:    #d9534f !default;
+$red:    #e5715c !default;
 $orange: #f0ad4e !default;
 $yellow: #ffd500 !default;
 $green:  #5cb85c !default;
@@ -920,8 +920,8 @@ $carousel-control-color:                      $white !default;
 $carousel-control-width:                      15% !default;
 $carousel-control-opacity:                    1;
 
-$carousel-indicator-width:                    8px;
-$carousel-indicator-height:                   8px;
+$carousel-indicator-width:                    9px;
+$carousel-indicator-height:                   9px;
 $carousel-indicator-spacer:                   3px !default;
 $carousel-indicator-active-bg:                $white !default;
 
