--- a/_application/scss/style/footer.scss
+++ b/_application/scss/style/footer.scss
@@ -1,5 +1,6 @@
 /* Footer */
 footer {
+	background: #212431;
 	padding: 30px 0;
 	@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
 
@@ -7,44 +8,45 @@ footer {
 		.copyright {
 			margin: 0;
 			float: left;
-			color: $blue;
+			color: $white;
 			font-size: 12px;
 			text-align: center;
 			font-weight: normal;
 			font-family: "UbuntuMedium";
+
+			a {
+				color: $white;
+				text-decoration: underline;
+
+				&:hover {
+					text-decoration: none;
+				}
+			}
 		}
 	}
 
 	.social {
-		width: 38px;
-		height: 38px;
-		font-size: 26px;
-		border: 2px solid $blue;
-		@include border-radius(50%);
+		color: $white;
+		font-size: 16px;
+		margin: 0px 10px;
 
-		&.vk {		
-			font-size: 24px;
-		}
 
 		&:hover{
+			font-size: 16px;
 			color: $white;
-			background: $blue;
 			outline: none;
 			text-decoration: none;
 		}
 	}
-	
-	.powered-wrapper{
-	    align-items: center;
-        flex-direction: row-reverse;
 
-		.powered {
-			margin: 0;
-			color: $blue;
+	.contacts-footer {
+		a {
+			display: block;
+			color: #fff;
+			height: 20px;
 			font-size: 12px;
-			text-align: left;
-			font-weight: normal;
-			font-family: "UbuntuMedium";
+			clear: both;
 		}
 	}
+
 }
