--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -20,22 +20,21 @@
 }
 
 .carousel-indicators {
-    width: 20px;
-    margin: 0 5%;
     bottom: auto;
-    top: 45%;
+    margin: 0px;
+    left: 100px;
+    width: 230px;
+    top: 3px;
 
 	li {
 		border-radius: 50%;
-	    margin-bottom: 10px;
-	    margin-right: 0;
-    	margin-left: 5px;
+	    margin: 0px 5px;
     	background: $white;
 	}
 
 	.active {
-		height: 14px;
-		max-width: 14px;
+		height: 12px;
+		max-width: 12px;
     	margin-left: 2px;
 		background: transparent;
 		border: 2px solid $white;
@@ -74,4 +73,13 @@
     p {
     	margin-bottom: 40px;
     }
+}
+
+.container.slider-bottom-container {
+    position: absolute;
+    height: 20px;
+    left: -50%;
+    right: -50%;
+    margin: auto;
+    bottom: 40px;
 }
