--- a/_application/template/include/common/footer.pug
+++ b/_application/template/include/common/footer.pug
@@ -3,13 +3,14 @@ footer
 	.container
 		.row
 			.col-md-4.col-sm-4.d-flex.copyright-wrapper
-				p.copyright.
-					©Все права защищены
-					<br/>
-					Ortodonts 2017
+				p.copyright
+					|Разработано в &nbsp
+					a(href="https://lauer.agency/", target="_blank") Lauer
+					br
+					|2017©Ortodonts.ru
 
-			.col-md-4.col-sm-4.text-center
-				.d-flex.flex-nowrap.justify-content-around.align-items-center
+			.col-md-4.col-sm-4.text-center.d-flex.flex-nowrap.justify-content-center
+				.d-flex.flex-nowrap.justify-content-center
 					a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#").vk
 						i.fa.fa-vk.faa-pulse
 					a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#")
@@ -17,7 +18,9 @@ footer
 					a.social.d-flex.justify-content-center.align-items-center.faa-parent.animated-hover(href="#")
 						i.fa.fa-instagram.faa-pulse
 
-			.col-md-4.col-sm-4.d-flex.powered-wrapper
-				p.powered Разработано в &nbsp
-					a(href="#") Lauer
+			.col-md-4.col-sm-4.contacts-footer.d-flex.align-items-end.flex-column
+				div
+					a(href="tel:+74959702078", target="_blank") +7 (495) 970-20-78
+				div
+					a(href="tel:+74959702078", target="_blank") +7 (985) 970-20-78
 // *FOOTER* 
