--- a/_application/template/include/common/header.pug
+++ b/_application/template/include/common/header.pug
@@ -9,7 +9,7 @@ header
 
 		.container
 			a.navbar-brand(href="../build/index.html")
-				img(src="images/ortodonts_logo.jpg", alt="ortodonts.ru")
+				img(src="images/ortodonts_logo.png", alt="ortodonts.ru")
 
 			.collapse.navbar-collapse.flex-row-reverse#HSN
 				ul.nav.navbar-nav
