--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -1,3 +1,7 @@
+.carousel {
+
+}
+
 .carousel-item {
     height: 560px;
     overflow: hidden;
@@ -26,19 +30,23 @@
     width: 230px;
     top: 3px;
 
-	li {
-		border-radius: 50%;
-	    margin: 0px 5px;
-    	background: $white;
-	}
+    @media (max-width: 991px) {
+        left: 0;
+    }
 
-	.active {
-		height: 12px;
-		max-width: 12px;
-    	margin-left: 2px;
-		background: transparent;
-		border: 2px solid $white;
-	}
+    li {
+        border-radius: 50%;
+        margin: 0px 5px;
+        background: $white;
+    }
+
+    .active {
+        height: 12px;
+        max-width: 12px;
+        margin-left: 2px;
+        background: transparent;
+        border: 2px solid $white;
+    }
 }
 
 .carousel-caption {
@@ -51,27 +59,27 @@
     width: 75%;
 
     h2 {
-    	font-size: 42px;
-    	margin-bottom: 30px;
-    	font-family: "UbuntuBold";
-   	    text-shadow: 2px 2px rgba(10, 10, 10, 0.2);
+        font-size: 42px;
+        margin-bottom: 30px;
+        font-family: "UbuntuBold";
+        text-shadow: 2px 2px rgba(10, 10, 10, 0.2);
 
-		@media (max-width: 1229px) {
-			font-size: 36px;
-		}
-		@media (max-width: 992px) {
-			font-size: 32px;
-		}
-		@media (max-width: 769px) {
-			font-size: 32px;
-		}
-		@media (max-width: 577px) {
-			font-size: 24px;
-		}
+        @media (max-width: 1229px) {
+            font-size: 34px;
+        }
+        @media (max-width: 992px) {
+            font-size: 32px;
+        }
+        @media (max-width: 769px) {
+            font-size: 32px;
+        }
+        @media (max-width: 577px) {
+            font-size: 24px;
+        }
     }
 
     p {
-    	margin-bottom: 40px;
+        margin-bottom: 40px;
     }
 }
 
@@ -81,5 +89,5 @@
     left: -50%;
     right: -50%;
     margin: auto;
-    bottom: 40px;
+    bottom: 40px; 
 }
