--- a/_application/scss/style/index/scroll-bottom.scss
+++ b/_application/scss/style/index/scroll-bottom.scss
@@ -18,6 +18,10 @@
 		font-size: 12px;
 		color: $white;
 	}
+
+    @media (max-width: 991px) {
+		right: 0;
+	}
 	
 	@media (max-width: 767px){
 		font-size: 11px;
