--- a/_application/template/include/index/carousel.pug
+++ b/_application/template/include/index/carousel.pug
@@ -40,7 +40,7 @@
 			li(data-target="#carousel", data-slide-to="1")
 			li(data-target="#carousel", data-slide-to="2")
 
-		a.mouse-scroll(onclick="scroll_down()").text-right
+		a.mouse-scroll(onclick="indexPage.scroll_down()").text-right
 			span Прокрутите вниз
 			.down-mouse
 				i.bottom
