--- a/_application/template/index.pug
+++ b/_application/template/index.pug
@@ -10,9 +10,8 @@ html(lang='ru')
 		include include/index/advantages-section
 		include include/index/services-section
 		include include/index/faq
+		include include/common/contactForm
 
 		include include/common/footer
 		include include/common/contact_button
-		script.
-			app.init();
 
