--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -20,5 +20,6 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 @import "style/footer";
 /* THEMES */
 @import "style/themes";
+@import "style/contactForm";
 
 @import "style/index/index";
