--- a/_application/scss/style/contact_button.scss
+++ b/_application/scss/style/contact_button.scss
@@ -4,7 +4,8 @@
 	right: 0;
     z-index: 10;
     width: auto;
-    right: -92px;
+	opacity: 0.4;
+    right: -150px;
 	position: fixed;
     cursor: pointer;
     font-size: 13px;
@@ -14,6 +15,12 @@
 	letter-spacing: 1px;
 	font-family: "UbuntuBold";
 	text-transform: uppercase;
+	@include transition(all 0.4s);
     @include transform(rotate(270deg));
 	@include box-shadow(0px 0px 3px 0px rgba(0,0,0,0.1));
+
+	&.visible {
+		opacity: 1;
+		right: -92px;
+	}
 }
