--- a/_application/scss/style/index/services-section.scss
+++ b/_application/scss/style/index/services-section.scss
@@ -2,8 +2,28 @@
 section.services-section-index {
 
 	.services-case-wrapper {
-		padding-top: 50px;
-		padding-bottom: 50px;
+        @media (min-width: 992px) {
+			padding-top: 50px;
+			padding-bottom: 50px;
+		}
+
+        @media (max-width: 991px) {
+			padding-top: 25px;
+			padding-bottom: 25px;
+		}
+
+		.item-group {
+		    margin: 0 -2px;
+
+			@media (max-width: 1229px) {
+				width: 100%;
+
+				.item {
+					max-width: 300px;
+				}
+			}
+		}
+		
 	}
 
 	.service-case {
@@ -20,7 +40,10 @@ section.services-section-index {
 
 		&:hover {
 			border-color: $blue;
-			// @include box-shadow(0 2px 2px 0 rgba(0,0,0,.4));
+			@include box-shadow(0 2px 2px 0 rgba(0,0,0,.4));
+			position: relative;
+			z-index: 1;
+			background: white;
 		}
 
 		&.opacity {
@@ -46,21 +69,37 @@ section.services-section-index {
 			color: $blue;
 			font-size: 18px;
 			margin-top: 35px;
-			padding: 0px 30px;
 			text-align: center;
 			font-weight: normal;
 			margin-bottom: 20px;
     		font-family: "UbuntuBold";
+
+    		@media (min-width: 768px) {
+				padding: 0px 30px;
+    		}
+    		@media (max-width: 767px) {
+				padding: 0 15px;
+    		}
+
 		}
 		
 		.services-description {
-			font-size: 12px;
 			font-weight: bold;
-			padding: 0px 20px;
 			color: $gray;
 			text-align: center;
 			letter-spacing: 0.23px;
 			font-family: "UbuntuLight";
+
+    		@media (min-width: 768px) {
+				padding: 0px 20px;
+				font-size: 12px;
+    		}
+
+    		@media (max-width: 767px) {
+				padding: 0px 15px;
+				font-size: 11px;
+    		}
+
 		}
 	}
 
