--- a/_application/template/include/index/advantages-section.pug
+++ b/_application/template/include/index/advantages-section.pug
@@ -5,20 +5,20 @@ section.advantages-section-index.section-p-80
 		//- 	.col-md-12
 		//- 		h2.text-center Преимущества
 		.row
-			.col-md-3
+			.col-md-3.col-sm-6
 				.advantage-wrapper
 					.advantage-icon(style="background: url(images/advantages/icon_1.png) no-repeat center;")
-					h4.advantage-descriprion Цифровая ортодонтрия
-			.col-md-3
+					h4.advantage-descriprion Цифровая<br>ортодонтрия
+			.col-md-3.col-sm-6
 				.advantage-wrapper
 					.advantage-icon(style="background: url(images/advantages/icon_2.png) no-repeat center;")
 					h4.advantage-descriprion.
 						Премиум <br/> брекет-системы
-			.col-md-3
+			.col-md-3.col-sm-6
 				.advantage-wrapper
 					.advantage-icon(style="background: url(images/advantages/icon_3.png) no-repeat center;")
-					h4.advantage-descriprion Передовая ортодонтрия
-			.col-md-3
+					h4.advantage-descriprion Передовая<br>ортодонтрия
+			.col-md-3.col-sm-6
 				.advantage-wrapper
 					.advantage-icon(style="background: url(images/advantages/icon_4.png) no-repeat center;")
 					h4.advantage-descriprion 3D прогноз результата до начала лечения
