about page step 1

--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -22,5 +22,7 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 /* THEMES */
 @import "style/themes";
 @import "style/contactForm";
+@import "style/topSection";
 
 @import "style/index/index";
+@import "style/about/about";
