--- a/_application/scss/style/index/services-section.scss
+++ b/_application/scss/style/index/services-section.scss
@@ -3,12 +3,11 @@ section.services-section-index {
 
 	.services-case-wrapper {
         @media (min-width: 992px) {
-			padding-top: 50px;
+			margin-top: -10px;
 			padding-bottom: 50px;
 		}
 
         @media (max-width: 991px) {
-			padding-top: 25px;
 			padding-bottom: 25px;
 		}
 
