--- a/_application/scss/style/contactForm.scss
+++ b/_application/scss/style/contactForm.scss
@@ -7,11 +7,8 @@ section.feedback-section {
 	#feedback {
 		margin-bottom: 0px;
 
-        @media (min-width: 992px) {
-			margin-top: 60px;
-		}
         @media (max-width: 991px) {
-			margin-top: 35px 25px 0;
+			margin: 0px 25px 0;
         }
 
 		textarea {
