--- a/_application/scss/style/index/about-section.scss
+++ b/_application/scss/style/index/about-section.scss
@@ -2,6 +2,10 @@ section.about-section-index {
 	z-index: 1;
 	position: relative;
 
+	h1 {
+		margin-bottom: .5rem;
+	}
+
 	@media (min-width: 540px) {
 		@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));
 	}
