--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -26,3 +26,4 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 
 @import "style/index/index";
 @import "style/about/about";
+@import "style/blog/blog";
