--- a/_application/template/include/common/contactForm.pug
+++ b/_application/template/include/common/contactForm.pug
@@ -27,4 +27,9 @@ section.section-p-80.feedback-section
 			.row
 				.col-md-12
 					.d-flex.justify-content-center
-						button.btn.btn-primary(type="submit").hvr-grow-shadow отправить
+						// class load 
+						button.btn.btn-primary.load(type="submit").hvr-grow-shadow
+							span.load 
+								i.fa.fa-spinner.faa-spin.animated
+								|отправка
+							span.normal отправить
