--- a/_application/template/include/common/topSection.pug
+++ b/_application/template/include/common/topSection.pug
@@ -1,6 +1,6 @@
 // Top Section
 section.topSection.d-flex.justify-content-center.align-items-center(style="background-image: url(" + bg + ");")
-	h1= active_menu
+	h1.wow.fadeIn(style="visibility: hidden;")= active_menu
 	- if(descriptionTop !== "")
 		p= descriptionTop
 // *Top Section*
