--- a/_application/template/include/index/faq.pug
+++ b/_application/template/include/index/faq.pug
@@ -6,7 +6,7 @@ section.faq-section-index
 				h2.text-center Часто задаваемые вопросы 
 
 				p.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 		.row
 			.col-md-12.text-center
 				a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
