--- a/_application/scss/style/about/about.scss
+++ b/_application/scss/style/about/about.scss
@@ -1,6 +1,7 @@
 /* ABOUT */
-
 .ortodont_about_text {
+	padding-bottom: 0px !important;
+
 	h3, h4 {
 		color: $blue;
 		font-size: 1.1rem;
@@ -20,3 +21,8 @@
 	}
 	
 }
+
+
+@import "education-section";
+@import "certificates";
+@import "advantages";
