--- a/_application/scss/style/topSection.scss
+++ b/_application/scss/style/topSection.scss
@@ -5,6 +5,13 @@
     background-size: cover;
     background-position: center;
 
+    @media (max-width: 696px) {
+        min-height: 250px
+    }
+    @media (max-width: 500px) {
+        min-height: 160px;
+    }
+
     h1, h2, h3, h4, h5, p {
     	color: #ffffff;
     }
