--- a/_application/template/include/common/head.pug
+++ b/_application/template/include/common/head.pug
@@ -13,13 +13,9 @@ head
 
 	title Ortodonts
 
-	link(rel='stylesheet', href='styles/css/font.min.css')
-	link(rel='stylesheet', href='styles/css/animate.min.css')
 	link(rel='stylesheet', href='styles/css/main.min.css')
 
 	script(src='js/jquery.min.js')
 	script(async, src='js/tether.min.js')
 	script(async, src='js/bootstrap.min.js')
-	script(src='js/wow.js')
-	script(src='js/main.js')
-	script(src='js/app.js')
+	script(async, src='js/wow.js')
