--- a/_application/template/include/index/advantages-section.pug
+++ b/_application/template/include/index/advantages-section.pug
@@ -2,6 +2,9 @@
 section.advantages-section-index.section-p-80
 	.container
 		.row
+			.col-md-12
+				h2.text-center Преимущества
+
 			.col-md-3.col-sm-6.col-6
 				.advantage-wrapper
 					.advantage-icon(style="background: url(images/advantages/icon_1.png) no-repeat center;")
