--- a/_application/template/blog.pug
+++ b/_application/template/blog.pug
@@ -14,6 +14,7 @@ html(lang='ru')
 						.column-left
 							include include/blog/category-menu
 						.column-right
+							include include/blog/item-list
 					
 					.clearfix
 
