--- a/_application/scss/include/_mixin.scss
+++ b/_application/scss/include/_mixin.scss
@@ -77,3 +77,12 @@
     -ms-transform: $param;
     transform: $param;
 }
+
+// Mixin itself
+@mixin clearfix() {
+  &::after {
+    display: block;
+    content: "";
+    clear: both;
+  }
+}
