--- a/_application/scss/main.scss
+++ b/_application/scss/main.scss
@@ -30,3 +30,5 @@ dev. Pavel Ugrynovych (Lauer - lauer.com.ua)
 @import "style/about/about";
 @import "style/blog/blog";
 @import "style/services/services";
+@import "style/portfolio/portfolio";
+@import "style/contacts/contacts";
