--- a/_application/template/about.pug
+++ b/_application/template/about.pug
@@ -1,6 +1,7 @@
 -var active_menu = 'Обо мне';
 -var descriptionTop = '';
 -var bg = 'images/bg/about_ortodonts.ru.jpg';
+-var breadcrumb = [{name: "Главная", link: "/index.html"}, {name: "Обо мне", link: ""}];
 
 html(lang='ru')
 	include include/common/head
