--- a/_application/scss/style/blog/blog.scss
+++ b/_application/scss/style/blog/blog.scss
@@ -1,7 +1,7 @@
 /* BLOG PAGE */
 .blog-container{
 	background: #f7f9ff;
-	padding-top: 40px;
+	padding: 40px 0;
 	min-height: 100%;
 	
 	.column-left {
