--- a/_application/template/blog.pug
+++ b/_application/template/blog.pug
@@ -1,4 +1,5 @@
 -var active_menu = 'Блог';
+-var breadcrumb = [{name: "Главная", link: "/index.html"}, {name: "Блог", link: "/blog.html"}];
 
 html(lang='ru')
 	include include/common/head
@@ -6,6 +7,12 @@ html(lang='ru')
 		include include/common/header
 		
 		section.blog-container
+		
+			.container
+				.row
+					.col-md-12
+						include include/common/breadcrumb
+		
 			include include/blog/top-line
 
 			.container.wrapper-columns
@@ -15,6 +22,7 @@ html(lang='ru')
 							include include/blog/category-menu
 						.column-right
 							include include/blog/item-list
+							include include/common/paginator
 					
 					.clearfix
 
