--- a/_application/template/include/common/head.pug
+++ b/_application/template/include/common/head.pug
@@ -16,6 +16,8 @@ head
 	link(rel='stylesheet', href='styles/css/main.min.css')
 
 	script(src='js/jquery.min.js')
+	script(src='js/jquery.lazyload.min.js')
 	script(async, src='js/tether.min.js')
 	script(async, src='js/bootstrap.min.js')
 	script(async, src='js/wow.js')
+	//- script(src='js/jquery.scrollstop.min.js')
