--- a/_application/scss/style/contactForm.scss
+++ b/_application/scss/style/contactForm.scss
@@ -4,12 +4,20 @@ section.feedback-section {
 		max-width: 780px;
 	}
 
+	h1, h2, h3, h4 {
+		margin-bottom: 50px;
+	}
+
 	#feedback {
 		margin-bottom: 0px;
 
         @media (max-width: 991px) {
 			margin: 0px 25px 0;
         }
+
+        .input-group {
+		    margin-bottom: 20px;
+		}
 
 		textarea {
 			min-height: 150px;
