--- a/_application/template/about.pug
+++ b/_application/template/about.pug
@@ -10,11 +10,13 @@ html(lang='ru')
 		
 		include include/common/topSection
 		include include/about/ortodont_about_text
-		include include/about/advantages-section
+		//- include include/about/advantages-section
 		include include/about/education-section
 		include include/about/certificates
 		include include/common/contactForm
 
 		include include/common/footer
 		include include/common/contact_button
+
+		script(src='js/slick.min.js')
 
