--- a/_application/template/include/about/ortodont_about_text.pug
+++ b/_application/template/include/about/ortodont_about_text.pug
@@ -1,5 +1,5 @@
 // Ortodont about text
-section.ortodont_about_text.section-p-80
+section.ortodont_about_text.section-p-80(data-js-init="AboutPage")
 	.container
 		.row
 			.col-md-12
