--- a/_application/template/include/index/faq.pug
+++ b/_application/template/include/index/faq.pug
@@ -8,6 +8,7 @@ section.faq-section-index
 				p.
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 		.row
-			.col-md-12.text-center
-				a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
+			.col-md-12
+				.btn-wrapper
+					a.btn.btn-primary.hvr-grow-shadow(href="#") читать дальше
 // *FAQ* 
