--- a/_application/scss/style/about/about.scss
+++ b/_application/scss/style/about/about.scss
@@ -1,6 +1,7 @@
 /* ABOUT */
 .ortodont_about_text {
 	padding-bottom: 0px !important;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
 	h3, h4 {
 		color: $blue;
