--- a/_application/scss/style/about/advantages.scss
+++ b/_application/scss/style/about/advantages.scss
@@ -2,7 +2,7 @@
 .advantages-section-about {
 	z-index: 1;
 	position: relative;
-	background: #f4f6fd;
+	background: #f7f7f7;
 
 	@media (max-width: 767px) and (min-width: 540px){
 		padding-bottom: 30px !important;
@@ -59,6 +59,7 @@
 			text-align: center;
 			line-height: 24px;
 			margin: 0px;
+			color: rgba(0,0,0,0.54);
 			
 	    	@media (min-width: 992px) {
 				font-size: 18px;
