--- a/_application/scss/style/index/advantages-section.scss
+++ b/_application/scss/style/index/advantages-section.scss
@@ -2,7 +2,7 @@
 section.advantages-section-index {
 	z-index: 1;
 	position: relative;
-	background: #f4f6fd;
+	background: #f7f7f7;
 
 	@media (max-width: 290px) {
 		.col-6 {
@@ -51,6 +51,7 @@ section.advantages-section-index {
 			font-weight: normal;
 			text-align: center;
 			margin: 0px;
+			color: rgba(0,0,0,0.54);
 			
 	    	@media (min-width: 992px) {
 				font-size: 18px;
