--- a/_application/scss/style/index/carousel.scss
+++ b/_application/scss/style/index/carousel.scss
@@ -65,6 +65,7 @@
         margin-bottom: 30px;
         font-family: "UbuntuBold";
         text-shadow: 2px 2px rgba(10, 10, 10, 0.2);
+        color: rgba(255,255,255,0.96);
 
         @media (max-width: 1229px) {
             font-size: 34px;
