--- a/_application/scss/style/index/faq.scss
+++ b/_application/scss/style/index/faq.scss
@@ -20,15 +20,74 @@
 
     h1, h2, h3, h4 {
 		color: $white;
+		text-align: left !important;
+		width: 720px;
+		margin: 0 auto;
+		margin-bottom: 50px;
+
+		@media (max-width: 780px) {
+			width: 100%;
+			padding-left: 20px;
+			padding-right: 30px;
+    	}
+        @media (max-width: 500px) {
+			font-size: 26px;
+			margin-bottom: 30px;
+    	}
     }
 
-	.btn {
-		margin-top: 80px;
-	}
+    .btn-wrapper {
+		width: 720px;
+		margin: 0 auto;
+		margin-top: 50px;
+
+		@media (max-width: 780px) {
+			width: 100%;
+			padding-left: 20px;
+			padding-right: 30px;
+    	}
+    	@media (max-width: 500px) {
+			margin-top: 30px;
+    	}
+    }
 
 	p {
-		max-width: 580px;
+		text-align: left !important;
+		width: 720px;
+		margin: 0 auto;
 		margin: 0 auto;
 	    letter-spacing: 0.5px;
+	    padding-left: 30px;
+	    position: relative;
+    	font-size: 18px;
+
+        @media (max-width: 780px) {
+			width: 100%;
+			padding-left: 40px;
+			padding-right: 30px;
+    	}
+
+	    &::before {
+	    	content: '';
+	    	position: absolute;
+	    	height: calc(100% - 12px);
+	    	width: 6px;
+	    	background: $white;
+	    	left: 0;
+	    	top: 8px;
+
+        	@media (max-width: 780px) {
+				left: 20px;
+        	}
+	    }
+
+        @media (max-width: 960px) and (min-width: 781px) {
+			padding-right: 50px;
+			font-size: 16px;
+        }
+        @media (max-width: 780px) {
+			padding-right: 30px;
+			font-size: 14px;
+		}
 	}
 }
