--- a/_application/template/include/about/advantages-section.pug
+++ b/_application/template/include/about/advantages-section.pug
@@ -1,10 +1,7 @@
 // Advantages
-section.advantages-section-about.section-p-80(data-js-init="AboutPage")
+section.advantages-section-about.section-p-80
 	.container
 		.row
-			.col-md-12
-				h2.text-center Преимущества
-
 			.col-md-4.col-sm-12.col-12
 				.advantage-wrapper.wow.fadeIn
 					.advantage-icon(style="background: #4479e0 url(images/advantages/icon_about_1.png) no-repeat center;")
